<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_profile_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000A0A0A"
    tools:context=".My_Profile">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/TextView_Names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Text_View_Names"
        android:textSize="30sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.034" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_Names"
        app:layout_constraintVertical_bias="0.024"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView_Track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/TextView_Track_Value"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.073" />

    <TextView
        android:id="@+id/textView_Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_Country_Value"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Track"
        app:layout_constraintTop_toBottomOf="@+id/textView_Track"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/textView_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_Email"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Country"
        app:layout_constraintTop_toBottomOf="@+id/textView_Country"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/textView_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_number_Value"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Email"
        app:layout_constraintTop_toBottomOf="@+id/textView_Email"
        app:layout_constraintVertical_bias="0.301" />

    <TextView
        android:id="@+id/textView_Slack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/textView_Slack"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_number"
        app:layout_constraintTop_toBottomOf="@+id/textView_number"
        app:layout_constraintVertical_bias="0.574" />

    <TextView
        android:id="@+id/SlackUserName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Salck_User_Name"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Slack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Telephone" />

    <TextView
        android:id="@+id/Telephone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Telephone"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_number"
        app:layout_constraintStart_toStartOf="@+id/Email" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:text="@string/Email"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Email"
        app:layout_constraintStart_toEndOf="@+id/textView_Email" />

    <TextView
        android:id="@+id/Country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Country"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Email" />

    <TextView
        android:id="@+id/Track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Track"
        android:textSize="15sp"
        app:fontFamily="@font/aubrey"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_Track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Country" />

</android.support.constraint.ConstraintLayout>